# qui.su

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: AdminPanel.jsx  Answer.jsx  App.jsx  Constants.js  Deck.jsx  GoogleSignIn.jsx  Header.jsx  HomePage.jsx  LandingPage.jsx  List.jsx  MarkdownTutorial.jsx  Presenter.jsx  Question.jsx  QuestionPieChart.jsx  QuizApi.js  QuizEditor.jsx  QuizList.jsx  RestApi.js  Settings.js  StorageManager.js  TextInput.jsx  Uploader.jsx  UserAdminPanel.jsx  index.js
client/src/css/: Answer.css  App.css  Deck.css  GoogleSignIn.css  Header.css  HomePage.css  LandingPage.css  List.css  MarkdownTutorial.css  PieChart.css  Question.css  QuizList.css  fileUpload.css  theme.css  wizard.css
server/: hootsman.cabal  stack.yaml
server/app/: Main.hs
server/src/: AppMonad.hs  DB.hs  Environment.hs  EventManager.hs  Hootsman.hs  Logging.hs  Notifier.hs  QuizParser.hs  Scheduler.hs
server/src/Backend/: Init.hs  Quiz.hs  Tables.hs  User.hs
server/src/DB/: Alternative.hs  Common.hs  Migrations.hs  Question.hs  Question.hs-boot  Quiz.hs  User.hs
server/src/DB/Migrations/: AddRawQuizText.hs
server/src/Endpoints/: Common.hs  Questioner.hs  Respondent.hs  User.hs
server/src/Jobs/: UpdateGoogleKeys.hs
server/src/Model/: Quiz.hs
server/src/Token/: Google.hs  Hootsman.hs  Issue.hs  Types.hs  Verify.hs
